[package]
name = "devhumor_bot"
version = "0.1.0"
authors = ["botahamec <botahamec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build.dependencies]
serde_codegen = "0.8"

[dependencies]
serenity = "0.7"
rand = "0.7"
hyper = "0.10"
hyper-native-tls = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
