[package]
name = "devhumor_bot"
version = "0.1.0"
authors = ["botahamec <botahamec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build.dependencies]
serde_codegen = "0.8"

[dependencies]
serenity = "0.7"
rand = "0.7"
rawr = {git = "https://github.com/Botahamec/rawr.git", branch = "master"}
